Fixes white and dark mode

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -215,10 +215,6 @@ code {
   color: var(--ntop-orange) !important;
 }
 
-.text-secondary {
-  color: var(--ntop-blue) !important;
-}
-
 .pie-chart {
   background-color: transparent !important;
 }
