--- a/http_src/views/private/clients/white-mode.scss
+++ b/http_src/views/private/clients/white-mode.scss
@@ -14,7 +14,7 @@
 }
 
 /* White-Mode */
-:root[data-theme = 'light'] {
+:root[data-theme='light'] {
   --ntop-text-color: #111111;
   --loading-bg: rgba(243, 244, 246, 0.9);
   --loading-text-color: #374151;
@@ -22,10 +22,11 @@
   --timeseries-legend-bg-color: #FFFFFF;
   --timeseries-legend-border-color: #A7A6A6;
   --icon-color: #363943;
+  --ntop-muted-text-color: #37474F;
 }
 
 /* Dark-Mode */
-:root[data-theme = 'dark'] {
+:root[data-theme='dark'] {
   --ntop-text-color: #E2E2E2;
   --loading-bg: #28242C;
   --loading-text-color: #E2E8F0;
@@ -33,6 +34,7 @@
   --timeseries-legend-bg-color: #212529;
   --timeseries-legend-border-color: #A7A6A6;
   --icon-color: #E2E2E2;
+  --ntop-muted-text-color: #A7A6A6;
 }
 
 a,
@@ -40,7 +42,7 @@ a,
   text-decoration: none;
 }
 
-summary > span {
+summary>span {
   border-bottom: 1px dotted #808080;
   color: initial;
 }
@@ -49,7 +51,7 @@ code {
   color: #393D44;
 }
 
-.masthead > .nav > .nav-item {
+.masthead>.nav>.nav-item {
   margin-left: 3px;
   margin-right: 3px;
 }
@@ -148,16 +150,16 @@ path.link {
 @keyframes line-appear {
   from {
     -webkit-clip-path: polygon(0px -1000px,
-    0px -1000px,
-    0px 1000px,
-    0px 1000px);
+        0px -1000px,
+        0px 1000px,
+        0px 1000px);
   }
 
   to {
     -webkit-clip-path: polygon(0px -1000px,
-    100% -1000px,
-    100% 1000px,
-    0px 1000px);
+        100% -1000px,
+        100% 1000px,
+        0px 1000px);
   }
 }
 
@@ -169,11 +171,11 @@ path.link {
   margin-top: 4px;
 }
 
-.ntop-progress-stacked-legend > span > span:last-child {
+.ntop-progress-stacked-legend>span>span:last-child {
   margin-left: 3px;
 }
 
-.ntop-progress-stacked-legend > span:not(:first-child) {
+.ntop-progress-stacked-legend>span:not(:first-child) {
   margin-left: 20px;
 }
 
@@ -367,7 +369,7 @@ main#n-container {
   border-radius: 0.25rem;
 }
 
-.chips-container > input[type = 'text'] {
+.chips-container>input[type='text'] {
   border: none;
   outline: none;
   display: inline-block;
@@ -375,7 +377,7 @@ main#n-container {
   min-width: 100%;
 }
 
-.chips-container > input[type = 'text']:focus {
+.chips-container>input[type='text']:focus {
   border: none !important;
   outline: none !important;
 }
@@ -470,7 +472,7 @@ details ul li i.dot {
   border-radius: 50%;
 }
 
-details ul li > span {
+details ul li>span {
   color: #8E8E8E;
 }
 
@@ -484,7 +486,7 @@ details ul li > span {
   background-color: #FBFBFB;
 }
 
-.switches-list-container > ul {
+.switches-list-container>ul {
   list-style-type: none;
   padding-left: 0;
 }
@@ -522,7 +524,7 @@ td.dt-body-right {
   overflow-y: scroll;
 }
 
-.scrollable-log > code {
+.scrollable-log>code {
   word-break: break-all;
 }
 
@@ -605,7 +607,7 @@ footer {
   top: calc(50% - 0.5rem);
 }
 
-.btn[role = 'combobox'] {
+.btn[role='combobox'] {
   border-color: #CED4D9;
   background-color: #FFFFFF;
 }
@@ -635,7 +637,7 @@ footer {
   width: 100%;
 }
 
-.ntop-widget-container > .error-box {
+.ntop-widget-container>.error-box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -776,7 +778,7 @@ td.dashboard-counter {
   border-color: #F7E694;
 }
 
-li > a > .fa-external-link-alt {
+li>a>.fa-external-link-alt {
   color: #0091EA;
 }
 
@@ -846,12 +848,12 @@ li > a > .fa-external-link-alt {
   padding: 0.05em 0.2em;
 }
 
-.tagify__tag > div {
+.tagify__tag>div {
   display: flex;
   align-items: center;
 }
 
-.bootstrap-select:not([class *= 'col-']):not([class *= 'form-control']):not(.input-group-btn) {
+.bootstrap-select:not([class *='col-']):not([class *='form-control']):not(.input-group-btn) {
   min-width: 10rem !important;
 }
 
@@ -923,8 +925,10 @@ table.dataTable thead th.sorting_asc::after {
   margin-left: auto;
   margin-right: auto;
   z-index: 10 !important;
-  left: 50%; /* 50% left from the parent */
-  transform: translate(-50%, 0); /* 50% from the element itself */
+  left: 50%;
+  /* 50% left from the parent */
+  transform: translate(-50%, 0);
+  /* 50% from the element itself */
 }
 
 /* left + transform center orizzontally the elements */
@@ -953,13 +957,15 @@ table.dataTable thead th.sorting_asc::after {
 .wizard-card {
   margin-top: 10px;
   border-radius: 4px;
-  box-shadow: 0px 2px 3px 0 #AAAAAA; /* Blue shadow */
+  box-shadow: 0px 2px 3px 0 #AAAAAA;
+  /* Blue shadow */
 }
 
 /* .wizard-selected */
 .wizard-card:hover {
   background: #EBF5FB;
-  box-shadow: 0px 2px 3px 0 #2471A3; /* Blue shadow */
+  box-shadow: 0px 2px 3px 0 #2471A3;
+  /* Blue shadow */
 }
 
 .wizard-form-group {
@@ -1168,11 +1174,11 @@ li.select2-selection__choice {
     overflow-x: auto !important;
   }
 
-  input[type = 'search'] {
+  input[type='search'] {
     width: 150px !important;
   }
 
-  input[type = 'search']:focus {
+  input[type='search']:focus {
     width: 170px !important;
   }
 }
@@ -1233,11 +1239,15 @@ table th.sticky-column-th {
   z-index: 99;
 }
 
-a.disabled{
+a.disabled {
   pointer-events: none;
   cursor: default;
 }
 
 .input {
   color: var(--ntop-text-color);
+}
+
+.text-secondary {
+  color: var(--ntop-muted-text-color) !important;
 }
